2006-08-22  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py: Reload the list of datatypes on every
	update of the datatype editor, so new datatypes may appear.

2006-08-21  Ronaldo Maia <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/currency.py:
	* kiwi/datatypes.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/button.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/filechooser.py:
	* kiwi/ui/widgets/fontbutton.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/textview.py:
	* tests/test_datatypes.py:
	Refactor datatypes and gazpacholoader:
	Each widgets hold the allowed datatypes for itself.
	Add name attribute for the converters.

2006-08-18  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/currency.py: Refactor current to a separate file

	* kiwi/datatypes.py (ConverterRegistry): add a remove method and
	make the add method a bit more robust

	* tests/test_datatypes.py: Add tests

	* po/kiwi.pot: Merge in new translations

	* po/sv.po: Update swedish translation
	* po/pt_BR.po: Update brazilian portuguese translation

2006-08-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/__init__.py: 
	* kiwi/__init__.py: 
	Move pygtk import to kiwi/__init__.py so it's called
	before gobject is tried to be imported.

2006-08-02  Aaron Spike   <aaron@ekips.org>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* AUTHORS:
	* kiwi/datatypes.py:
	* kiwi/ui/widgets/entry.py:
	* tests/test_datatypes.py:

	Add proper entry mask support on win32, fixes #2721.

2006-08-02  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gadgets.py:
	* kiwi/ui/widgets/entry.py:

	DateEntry breaks when set invalid, fixes #2720.

2006-07-25  Johan Dahlin  <jdahlin@async.com.br>

	reviewed by: Henrique Romano  <henrique@async.com.br>
